# cms

./: .gitignore  Dockerfile.enclave  README.md  aws-nitro-enclaves-cli-dev.rpm  deploy_mnist.sh  destroy_enclave.sh  download_logs.sh  download_mnist.sh  download_mnist_data.py  enclave_info.txt  requirements.txt  setup_enclave.sh  setup_instance.sh  training_logs.txt
.github/workflows/: ci-cd.yml
contract-management-system/: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml
contract-management-system/contracts/: ContractLedger.sol
contract-management-system/crates/: README.md
contract-management-system/crates/audit-engine/: Cargo.toml
contract-management-system/crates/audit-engine/src/: lib.rs
contract-management-system/crates/contract-templates/: Cargo.toml
contract-management-system/crates/contract-templates/src/: lib.rs
contract-management-system/crates/enclave-runtime/: Cargo.toml  Dockerfile
contract-management-system/crates/enclave-runtime/src/: kms.rs  lib.rs  main.rs  mnist.rs  s3.rs
contract-management-system/crates/iam/: README.md
contract-management-system/crates/model-training/: Cargo.toml  README.md
contract-management-system/crates/model-training/src/: lib.rs
contract-management-system/crates/model-training/src/data/: mnist_preprocessor.rs
contract-management-system/crates/model-training/src/models/: mnist.rs
contract-management-system/crates/model-training/src/training/: pipeline.rs
contract-management-system/crates/model-training/src/utils/: secure_storage.rs
contract-management-system/crates/web-ui/src/: app.rs  lib.rs
contract-management-system/crates/web-ui/src/components/: contract_details.rs  contract_form.rs  contract_list.rs  navbar.rs  stats.rs
contract-management-system/crates/web-ui/src/layouts/: main_layout.rs
contract-management-system/crates/web-ui/src/pages/: contract_details.rs  contracts.rs  dashboard.rs  login.rs  registration.rs
contract-management-system/crates/web-ui/src/state/: auth.rs
contract-management-system/deployment/: README.md
contract-management-system/deployment/terraform/: main.tf  outputs.tf  variables.tf
contract-management-system/docs/: architecture.md  blockchain_integration.md  configuration.md  deployment.md  did_contract_integration.md  did_integration.md  did_integration_guide.md  monitoring.md  quickstart.md  tutorial.md
contract-management-system/docs/api/: README.md  openapi.yaml
contract-management-system/docs/architecture/: README.md  contracts_and_enclaves.md  model_training.md  performance.md
contract-management-system/docs/db/: SCHEMA.md
contract-management-system/docs/deployment/: REMOTE_DEPLOYMENT.md
contract-management-system/docs/iam/: README.md  audit.md  permissions.md
contract-management-system/docs/migrations/: CLI.md  README.md
contract-management-system/docs/onboarding/: DEVELOPER_GUIDE.md
contract-management-system/docs/security/: README.md
contract-management-system/docs/training/: QUICK_START.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md
contract-management-system/docs/tutorials/: mnist_tutorial.md
contract-management-system/docs/web-ui/: API_INTEGRATION.md  ARCHITECTURE.md  COMPONENTS.md  README.md
contract-management-system/docs/web-ui/components/: CONTRACTS.md  REGISTRATION.md
contract-management-system/examples/: README.md  client.rs  python_client.py
contract-management-system/migrations/: 20240315_create_audit_logs.rs  20240315_create_contract_signatures.rs  20240315_create_contracts.rs  20240315_create_organizations.rs  20240320000000_create_iam_tables.down.sql  20240320000000_create_iam_tables.up.sql  20240320000001_create_contract_tables.up.sql  20240320000002_create_enclave_tables.down.sql  20240320000002_create_enclave_tables.up.sql  V1__create_contracts_table.sql
contract-management-system/monitoring/: prometheus.yml
contract-management-system/scripts/: deploy_enclave.sh
contract-management-system/src/: error.rs  lib.rs  main.rs
contract-management-system/src/api/: contract.rs  contracts.rs  mod.rs
contract-management-system/src/auth/: guard.rs  mod.rs
contract-management-system/src/auth/did/: challenge.rs  mod.rs  resolver.rs  verification.rs
contract-management-system/src/contracts/: mod.rs
contract-management-system/src/enclave/: mod.rs
contract-management-system/src/iam/: audit.rs  identity.rs  mod.rs  models.rs  permissions.rs  policies.rs  roles.rs
contract-management-system/src/models/: contract.rs  contracts.rs  enclaves.rs  mod.rs  party.rs  registration.rs  repository.rs  signature.rs  users.rs
contract-management-system/src/services/: audit.rs  contract.rs  contracts.rs  ledger.rs  organizations.rs  registration.rs  users.rs
contract-management-system/src/utils/: error.rs  metrics.rs  mod.rs
contract-management-system/tests/integration/: contract_tests.rs
deployment/: .terraform.lock.hcl  deploy_mnist.sh  destroy_resources.sh  main.tf  outputs.tf  variables.tf
docker/: Dockerfile  README.md  cleanup.sh  requirements.txt  setup_and_deploy.sh  train_mnist.py
docker/mnist-training/: Dockerfile  deploy_mnist.sh  requirements.txt  train_mnist.py
docs/: README.md  training_results.md
docs/api/: README.md  contracts.md
docs/architecture/: overview.md
docs/db/: README.md  schema.md
docs/deployment/: installation.md
docs/monitoring/: README.md  alerts.md  logging.md  metrics.md
docs/security/: audit_checklist.md  incident_response.md
docs/testing/: load_testing.md
docs/training/: MNIST_ORIGIN.md  README.md  junior_developer_guide.md
docs/training_logs/: training_logs_20250531_000245.json  training_logs_20250531_000245.txt  training_logs_20250531_001234.json  training_logs_20250531_001234.txt  training_logs_20250531_002156.json  training_logs_20250531_002156.txt  training_report_20250531_000246.md  (+6 more)
docs/tutorials/: faq.md  (+4 more)
enclave/: README.md  build_and_deploy.sh  run_mnist_training.sh
iam-system/: README.md
mnist_data/: dataset_summary.txt
monitoring/: alertmanager.yml  blackbox.yml  docker-compose.yml  prometheus.yml
(+74 files in other folders)
