[package]
name = "audit-engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Organization <contact@your-org.com>"]
description = "Audit and compliance engine for AI model training contracts"

[dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Blockchain Integration (for immutable audit logs)
ethers = "2.0"
web3 = "0.19"

# Cryptography
ring = "0.17"
sodiumoxide = "0.2"
merkle-tree = "0.1"
bulletproofs = "4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS Integration
aws-config = "1.1"
aws-sdk-cloudtrail = "1.11"
aws-sdk-cloudwatch = "1.11"
aws-sdk-kms = "1.11"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Reporting
handlebars = "5.1"
plotters = "0.3"
csv = "1.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.12"
rstest = "0.18"
test-case = "3.3"
testcontainers = "0.15"

[features]
default = ["postgres"]
postgres = []
blockchain = ["ethers", "web3"]
test-utils = [] 