[package]
name = "enclave-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Your Organization <contact@your-org.com>"]
description = "Secure enclave runtime for AI model training"

[dependencies]
# AWS Nitro Enclaves
aws-nitro-enclaves-sdk = { git = "https://github.com/aws/aws-nitro-enclaves-sdk-rust.git", branch = "main" }
aws-sdk-kms = "0.34.0"
aws-sdk-s3 = "0.34.0"
aws-config = "0.56.1"

# Cryptography
ring = "0.17"
sodiumoxide = "0.2"
x509-parser = "0.15"
bulletproofs = "4.0"
curve25519-dalek = "4.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.28.2", features = ["full"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0.75"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10.0"

# Model Training
tch = "0.13.0"
ndarray = "0.15.6"

[dev-dependencies]
mockall = "0.12"
rstest = "0.18"
test-case = "3.3"

[features]
default = []
mock-enclave = []
test-utils = [] 