[package]
name = "model-training"
version = "0.1.0"
edition = "2021"
authors = ["Your Organization <contact@your-org.com>"]
description = "Secure AI model training orchestration within enclaves"

[dependencies]
# Model Training
tch = "0.14"  # PyTorch bindings
ndarray = "0.15"
burn = "0.10"  # Pure Rust ML framework

# Enclave Integration
aws-nitro-enclaves-sdk = "0.4"
enclave-runtime = { path = "../enclave-runtime" }

# Data Processing
arrow = "47.0"
polars = "0.35"
rand = "0.8"

# Metrics & Validation
statrs = "0.16"
metrics = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
rstest = "0.18"
test-case = "3.3"
criterion = "0.5"  # For benchmarking

[[bench]]
name = "training_benchmarks"
harness = false

[features]
default = []
cuda = ["tch/cuda"]
test-utils = [] 